--- a/_config.yml
+++ b/_config.yml
@@ -18,31 +18,31 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: care1e5s # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: Reversing & Vuln Research Blog for fun and profit # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Reversing & Vuln Research Blog for fun and profit
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ""
+url: "https://care1es5.github.io"
 
 github:
-  username: github_username # change to your github username
+  username: care1es5 # change to your github username
 
 twitter:
-  username: twitter_username # change to your twitter username
+  username: care1e5s # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
+  name: care1e5s
   email: example@domain.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your twitter homepage
-    - https://github.com/username # change to your github homepage
+    - https://twitter.com/care1e5s # change to your twitter homepage
+    - https://github.com/care1e5s # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
